# MemoryManage

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: cmake-single-platform-debug.yml  cmake-single-platform-release.yml  cmake-single-platform.yml
MemoryManage/: MemoryManage.c
Testing/: TAG
Testing/20240925-2229/: Test.xml
docs/: apidocs.md  index.md  installing.md  quickstart.md  stats.md  tags.md  userguide.md
docs/api/: enums.md  functiondefs.md  functions.md  structs.md  typedefs.md
include/: MemoryManage.h
include/MemoryManage/: MemoryManage.h
src/: CMakeLists.txt
src/MemoryManage/: MemoryManage.c
test/: CMakeLists.txt  testOther.c  testOtherTarget.c  testSame.c
test/fill_tests/: CMakeLists.txt  testOther.c  testOtherTarget.c  testSame.c
test/read_tests/: CMakeLists.txt  testOther.c  testSame.c
test/search_tests/: CMakeLists.txt  testSame.c
test/write_tests/: CMakeLists.txt  testOther.c  testOtherTarget.c  testSame.c
